--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
 [tox]
-envlist=py35,p36
+envlist=py35,p36,lint,docs
+skip_missing_interpreters = true
 
 [testenv]
 deps = -rrequirements-test.txt
 commands=
     python setup.py test
+
+[testenv:lint]
+deps=
+    flake8
