--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,9 +1,9 @@
 pytest
-pytest-runner
 pep8
+pytest-pylint
 yapf
 sphinx
 recommonmark
 sphinxcontrib-restbuilder
 sphinxcontrib-programoutput
-
+pytest-console-scripts
