try to disable lint

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py35,p36,lint,docs
+envlist=py35,p36
 skip_missing_interpreters = true
 
 [testenv]
@@ -9,4 +9,6 @@ commands=
 
 [testenv:lint]
 deps=
+    flake8
+commands=
     flake8 --ignore=E501,F401 steem steembase
