--- a/tox.ini
+++ b/tox.ini
@@ -7,8 +7,7 @@ deps = -rrequirements-test.txt
 commands=
     python setup.py test
 
-[testenv:lint]
-deps=
-    flake8
+[testenv:pylint]
+
 commands=
-    flake8 --ignore=E501,F401 steem steembase
+    pylint steem steembase
